  On Windows some validation tool tips are not aligned right but otherwise the layout is arranged correctly.
* Manual zooming is enabled even if Auto Zoom is on; this turns off Auto Zoom automatically.
* Turning smoothing of zoomed images on/off affects also shrunk images (previously affected enlarged images only).
- Resize: Preventing that invalid sizes replace current text to 0
- Manage Installations:
  - Remove was always enabled even it there was no installed version
- Fixing possible errors when closing forms while an async operation is still in progress.
* API changes:
  * Members are annotated for using C# 8.0 nullable references
  + ViewModelFactory class:
    + New CreateLanguageSettings method
    + New CreateEditResources method
  + IViewModel interface
    + New IsModified property
  * IViewModel<TModel> interface
    * The IsModified property is now inherited from IViewModel
  + IView interface:
    + New ShowDialog(IView) overload
  + ViewFactory class:
    + New ShowDialog(IViewModel, IView) overload

- KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
- Fixing a possible IndexOutOfRangeException when debugging an animated GIF.
* Improved performance and reduced memory consumption when serializing and deserializing debugged objects.

* KGySoft.Drawing.DebuggerVisualizers.Package.dll
=================================================
* When ImagingTools is executed from Visual Studio Tools menu a new thread is created so the possible lagging of
  Visual Studio does not affect the performance of ImagingTools anymore.


~~~~~~~~~
+ v2.3.0:
~~~~~~~~~

+ KGySoft.Drawing.ImagingTools.exe
==================================
+ Key shortcuts for several commands
+ Improving the image viewer control performance for large images
+ Save/Load: Supporting saving/loading raw bitmap data, which preserves any pixel format
+ Color Settings:
  + Count Colors
+ New Edit Image drop down button
  + Rotate Left/Right
  + Resize Bitmap